Actions
Bug #10378
closedagpgart: NULL pointer errors
Start date:
2019-02-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../intel/io/agpgart/agp_kstat.c: In function 'agp_init_kstats': ../../intel/io/agpgart/agp_kstat.c:105:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3ab29d2187aaeb14feecd145834ac2f151dc822c
commit 3ab29d2187aaeb14feecd145834ac2f151dc822c Author: Toomas Soome <tsoome@me.com> Date: 2019-02-20T20:23:30.000Z 10378 agpgart: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions